syntax = "proto3";

package hridocclient;

option go_package = "./hridocclient";


// CertificateAddReq 证书添加请求
message CertificateAddReq {
    string name = 1;//证书名称
    string path = 2; //存储位置
    string userId = 3;// 证书持有人
}

message CertificateAddResp{
    string pong = 1;
}

message CertificateListReq{
    int64 current = 1;
    int64 pageSize = 2;
}

message CertificateListData {
    string name = 1;//证书名称
    string path = 2; //存储位置
    string userId = 3;// 证书持有人
    string id = 4; //证书ID
}

message CertificateListResp{
    int64 total = 1;
    repeated CertificateListData list = 2;
}

message CertificateUpdateReq{
    string name = 1;//证书名称
    string path = 2; //存储位置
    string userId = 3;// 证书持有人
    string id = 4; //证书ID
}

message CertificateUpdateResp{
    string pong = 1;
}

message CertificateDeleteReq{
    string id = 1; //证书ID
}

message CertificateDeleteResp{
    string pong = 1;
}


message CertificateCategoryReq {

}

message CertificateCategoryResp{

}

message CertificateCategoryListReq {

}

message CertificateCategoryListResp{

}

message CertificateCategoryUpdateReq{

}

message CertificateCategoryUpdateResp{

}

message CertificateCategoryDeleteReq{

}

message CertificateCategoryDeleteResp{
    
}

service HridocService {
    // CertificateAdd 证书添加
    rpc CertificateAdd(CertificateAddReq) returns(CertificateAddResp);
    // CertificateList 证书列表
    rpc CertificateList(CertificateListReq) returns(CertificateListResp);
    // CertificateUpdate 证书更新
    rpc CertificateUpdate(CertificateUpdateReq) returns(CertificateUpdateResp);
    // CertificateDelete 证书删除
    rpc CertificateDelete(CertificateDeleteReq) returns(CertificateDeleteResp);

    // CertificateCategoryAdd 证书类别增加
    rpc CertificateCategoryAdd(CertificateCategoryReq) returns(CertificateCategoryResp);
    // CertificateCategoryList 证书列表列表
    rpc CertificateCategoryList(CertificateCategoryListReq) returns(CertificateCategoryListResp);
    // CertificateCategoryUpdate 证书列表更新
    rpc CertificateCategoryUpdate(CertificateCategoryUpdateReq) returns(CertificateCategoryUpdateResp);
    // CertificateCategoryDelete 帧数类别删除
    rpc CertificateCategoryDelete(CertificateCategoryDeleteReq) returns(CertificateCategoryDeleteResp); 
}


